[tool.poetry]
name = "pnl-explained"
version = "0.1.0"
description = ""
authors = ["Gautier Moin <gmo@activeviam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
atoti = "^0.8.6"
atoti-aws = "^0.8.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"

[tool.poetry.scripts]
atoti = "pnl_explained.pnl_explained:main"
local-atoti = "pnl_explained.pnl_explained:local_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
