[tool.poetry]
name = "atoti-script"
version = "0.1.0"
description = ""
authors = ["Gautier Moin <gmo@activeviam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
atoti-server = "0.9.2.20241115165210+697980f"
atoti-client = "0.9.2.20241115165210+697980f"
atoti-server-jdbc = "0.9.2.20241115165210+697980f"
atoti-client-jdbc = "0.9.2.20241115165210+697980f"
atoti = "0.9.2.20241115165210+697980f"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"

[[tool.poetry.source]]
name = "atoti-experimental"
url = "https://activeviam.jfrog.io/artifactory/api/pypi/atoti-python-api-pypi-internal/simple/"
priority = "supplemental"

[tool.poetry.scripts]
atoti = "atoti_script.init:main"
local-atoti = "atoti_script.init:local_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
