[project]
name = "atoti-script"
version = "0.1.0"
description = ""
authors = [{ name = "Gautier Moin", email = "gmo@activeviam.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["atoti==0.9.6"]

[project.scripts]
atoti = "atoti_script.init:main"
local-atoti = "atoti_script.init:local_main"

[tool.uv]
dev-dependencies = ["ruff==0.11.10"]

[build-system]
requires = ["uv_build>=0.7.0,<0.8.0"]
build-backend = "uv_build"
